vendor/vnc/Viewer.h




/**
 * @}
 * @name Functions for managing connection negotiation
 * @{
 */

/** Callback receiving requests for authentication for a Viewer. */
typedef struct {
  /**
   * Request for a username and/or password.  Implementors should reply with a
   * username and/or password either immediately or later, by calling
   * vnc_Viewer_sendAuthenticationResponse().  This callback function is
   * required if using a @ref vnc_Viewer_AuthenticationCallback.
   * This callback will not be triggered if no credentials are required.
   *
   * @param needUser Whether a username must be supplied.
   * @param needPasswd Whether a password must be supplied.
   */
  void (*requestUserCredentials)(void* userData,
                                 vnc_Viewer* viewer,
                                 vnc_bool_t needUser,
                                 vnc_bool_t needPasswd);

  /**
   * Notification to cancel a username and/or password request.  This can happen
   * if the server closes the connection while the Viewer is waiting for the
   * user to provide a username/password.  This callback is optional.
   */
  void
  (*cancelUserCredentialsRequest)(void* userData,
                                  vnc_Viewer* viewer);
} vnc_Viewer_AuthenticationCallback;


/**
 * Sets the callback to be called when a username and/or password is required.
 * If these are not provided then UI will be rendered into the framebuffer
 * asking the user to provide the required information.
 *
 * @param viewer The Viewer.
 * @param callback The new authentication callback.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval InvalidArgument
 *     The vnc_Viewer_AuthenticationCallback::requestUserCredentials callback is
 *     NULL
 */
VNC_SDK_API vnc_status_t
vnc_Viewer_setAuthenticationCallback(
    vnc_Viewer* viewer,
    _In_opt_ const vnc_Viewer_AuthenticationCallback* callback,
    void* userData);


/**
 * Provides the SDK with the result of a username/password request.
 *
 * @param viewer The Viewer.
 * @param ok This should be #vnc_false if the user cancelled the password
 *     dialog.
 * @param user This must not be NULL if @p needUser was @p vnc_true in the
 *     username/password request, otherwise it is ignored.
 * @param passwd This must not be NULL if @p needPasswd was @p vnc_true in the
 *     username/password request, otherwise it is ignored.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval UnexpectedCall
 *     The session is not waiting for a username/password response
 *
 * @retval InvalidArgument
 *     @c user or @c passwd was requested but is NULL
 */
VNC_SDK_API vnc_status_t
vnc_Viewer_sendAuthenticationResponse(vnc_Viewer* viewer,
                                      vnc_bool_t ok,
                                      _In_opt_z_ const char* user,
                                      _In_opt_z_ const char* passwd);


/** Callback receiving verification requests to check the peer's identity. */
typedef struct {
  /**
   * Request to verify the identity of the peer (the server).  Implementors
   * should respond by calling vnc_Viewer_sendPeerVerificationResponse().  This
   * callback function is required if using a
   * @ref vnc_Viewer_PeerVerificationCallback.
   *
   * Apart from cancelPeerVerification, no further callbacks (such as
   * disconnected) will be issued for this connection until peer verification
   * has been completed succesfully.
   *
   * @param hexFingerprint The hash of the server's fingerprint, as a string of
   *     hexadecimal digits.
   * @param catchphraseFingerprint The hash of the server's fingerprint, as a
   *     catchphrase.
   * @param serverRsaPublic The server's public key, in the format returned by
   *     vnc_RsaKey_getDetails().
   */
  void
  (*verifyPeer)(void* userData,
                vnc_Viewer* viewer,
                const char* hexFingerprint,
                const char* catchphraseFingerprint,
                const vnc_DataBuffer* serverRsaPublic);

  /**
   * Notification to cancel a prior request for peer verification.  This can
   * happen if the server closes the connection while peer verification is in
   * progress.  This callback is optional.
   */
  void
  (*cancelPeerVerification)(void* userData,
                            vnc_Viewer* viewer);
} vnc_Viewer_PeerVerificationCallback;


/**
 * Sets the callbacks to be called to verify the identity of the peer (server).
 *
 * If these are not provided for a VNC Cloud connection, the connection will
 * continue regardless, since VNC Cloud automatically verifies peer identities
 * for the connecting user. This check is for peace of mind only, and likely
 * only to be useful if you have out-of-band access to a list of all potential
 * Server identities.
 *
 * If these are not provided for a Direct TCP connection, on the other hand, an
 * identity verification dialog will automatically be displayed (rendered
 * into the framebuffer), since the connecting user really should consider the
 * risk of connecting to a MITM or other malicious entity.
 *
 * @param viewer The Viewer.
 * @param callback The new peer verification callback.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval InvalidArgument
 *     The vnc_Viewer_PeerVerificationCallback::verifyPeer callback is NULL
 */
VNC_SDK_API vnc_status_t
vnc_Viewer_setPeerVerificationCallback(
    vnc_Viewer* viewer,
    _In_opt_ const vnc_Viewer_PeerVerificationCallback* callback,
    void* userData);


/**
 * Provides the SDK with the response to the
 * vnc_Viewer_PeerVerificationCallback::verifyPeer request.
 *
 * @param viewer The Viewer.
 * @param ok #vnc_true if the connection is approved, #vnc_false if it should
 *    be rejected.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval UnexpectedCall
 *     No peer verification is in progress
 */
VNC_SDK_API vnc_status_t
vnc_Viewer_sendPeerVerificationResponse(vnc_Viewer* viewer,
                                        vnc_bool_t ok);


/**
 * Enables receipt of audio from the Server by the Viewer. The audio stream
 * will be automatically negotiated with the peer endpoint, if possible, and
 * any received audio data will be played back via the device's default audio
 * mixer.
 * By default, this is disabled and no audio channel will be negotiated.
 *
 * @param viewer The Viewer.
 * @param enable #vnc_true to enable audio playback, #vnc_false to disable.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval PeerNotSupported
 *     The peer endpoint does not support audio
 * 
 * @retval NotSupported
 *     This platform does not support audio
 *
 * @since 1.9
 */
VNC_SDK_API vnc_status_t
vnc_Viewer_enableAudio(vnc_Viewer* viewer,
                       vnc_bool_t enable);


/**
 * Obtains the Viewer's @ref vnc_AnnotationManager for handling annotation
 * operations.
 *
 * @param viewer The current Viewer.
 *
 * @return A @ref vnc_AnnotationManager, valid for the lifetime of the Viewer.
 *
 * @since 1.4
 */
VNC_SDK_API vnc_AnnotationManager*
vnc_Viewer_getAnnotationManager(vnc_Viewer* viewer);


/**
 * Enumeration of picture quality levels.
 */
typedef enum {
  /**
   * Auto quality means that the viewer selects an appropriate encoding and
   * colour level based on its own line speed estimate.
   */
  vnc_Viewer_PictureQuality_Auto = 0,
  vnc_Viewer_PictureQuality_High = 1,
  vnc_Viewer_PictureQuality_Medium = 2,
  vnc_Viewer_PictureQuality_Low = 3
} vnc_Viewer_PictureQuality;


/**
 * Returns the viewer's current picture quality.
 *
 * This returns the actual picture quality in use if the viewer is connected,
 * or the last value set otherwise.
 */
VNC_SDK_API vnc_Viewer_PictureQuality
vnc_Viewer_getPictureQuality(vnc_Viewer* viewer);