src/viewer.rs

#[test]
fn bindgen_test_layout_vnc_Viewer_AuthenticationCallback() {
    assert_eq!(
        ::std::mem::size_of::<vnc_Viewer_AuthenticationCallback>(),
        16usize,
        concat!("Size of: ", stringify!(vnc_Viewer_AuthenticationCallback))
    );
    assert_eq!(
        ::std::mem::align_of::<vnc_Viewer_AuthenticationCallback>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(vnc_Viewer_AuthenticationCallback)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<vnc_Viewer_AuthenticationCallback>())).requestUserCredentials
                as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vnc_Viewer_AuthenticationCallback),
            "::",
            stringify!(requestUserCredentials)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<vnc_Viewer_AuthenticationCallback>()))
                .cancelUserCredentialsRequest as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(vnc_Viewer_AuthenticationCallback),
            "::",
            stringify!(cancelUserCredentialsRequest)
        )
    );
}
extern "C" {
    #[doc = " Sets the callback to be called when a username and/or password is required."]
    #[doc = " If these are not provided then UI will be rendered into the framebuffer"]
    #[doc = " asking the user to provide the required information."]
    #[doc = ""]
    #[doc = " @param viewer The Viewer."]
    #[doc = " @param callback The new authentication callback."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     The vnc_Viewer_AuthenticationCallback::requestUserCredentials callback is"]
    #[doc = "     NULL"]
    pub fn vnc_Viewer_setAuthenticationCallback(
        viewer: *mut vnc_Viewer,
        callback: *const vnc_Viewer_AuthenticationCallback,
        userData: *mut ::std::os::raw::c_void,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Provides the SDK with the result of a username/password request."]
    #[doc = ""]
    #[doc = " @param viewer The Viewer."]
    #[doc = " @param ok This should be #vnc_false if the user cancelled the password"]
    #[doc = "     dialog."]
    #[doc = " @param user This must not be NULL if @p needUser was @p vnc_true in the"]
    #[doc = "     username/password request, otherwise it is ignored."]
    #[doc = " @param passwd This must not be NULL if @p needPasswd was @p vnc_true in the"]
    #[doc = "     username/password request, otherwise it is ignored."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    #[doc = ""]
    #[doc = " @retval UnexpectedCall"]
    #[doc = "     The session is not waiting for a username/password response"]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     @c user or @c passwd was requested but is NULL"]
    pub fn vnc_Viewer_sendAuthenticationResponse(
        viewer: *mut vnc_Viewer,
        ok: vnc_bool_t,
        user: *const ::std::os::raw::c_char,
        passwd: *const ::std::os::raw::c_char,
    ) -> vnc_status_t;
}
#[doc = " Callback receiving verification requests to check the peer's identity."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vnc_Viewer_PeerVerificationCallback {
    #[doc = " Request to verify the identity of the peer (the server).  Implementors"]
    #[doc = " should respond by calling vnc_Viewer_sendPeerVerificationResponse().  This"]
    #[doc = " callback function is required if using a"]
    #[doc = " @ref vnc_Viewer_PeerVerificationCallback."]
    #[doc = ""]
    #[doc = " Apart from cancelPeerVerification, no further callbacks (such as"]
    #[doc = " disconnected) will be issued for this connection until peer verification"]
    #[doc = " has been completed succesfully."]
    #[doc = ""]
    #[doc = " @param hexFingerprint The hash of the server's fingerprint, as a string of"]
    #[doc = "     hexadecimal digits."]
    #[doc = " @param catchphraseFingerprint The hash of the server's fingerprint, as a"]
    #[doc = "     catchphrase."]
    #[doc = " @param serverRsaPublic The server's public key, in the format returned by"]
    #[doc = "     vnc_RsaKey_getDetails()."]
    pub verifyPeer: ::std::option::Option<
        unsafe extern "C" fn(
            userData: *mut ::std::os::raw::c_void,
            viewer: *mut vnc_Viewer,
            hexFingerprint: *const ::std::os::raw::c_char,
            catchphraseFingerprint: *const ::std::os::raw::c_char,
            serverRsaPublic: *const vnc_DataBuffer,
        ),
    >,
    #[doc = " Notification to cancel a prior request for peer verification.  This can"]
    #[doc = " happen if the server closes the connection while peer verification is in"]
    #[doc = " progress.  This callback is optional."]
    pub cancelPeerVerification: ::std::option::Option<
        unsafe extern "C" fn(userData: *mut ::std::os::raw::c_void, viewer: *mut vnc_Viewer),
    >,
}
#[test]
fn bindgen_test_layout_vnc_Viewer_PeerVerificationCallback() {
    assert_eq!(
        ::std::mem::size_of::<vnc_Viewer_PeerVerificationCallback>(),
        16usize,
        concat!("Size of: ", stringify!(vnc_Viewer_PeerVerificationCallback))
    );
    assert_eq!(
        ::std::mem::align_of::<vnc_Viewer_PeerVerificationCallback>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(vnc_Viewer_PeerVerificationCallback)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<vnc_Viewer_PeerVerificationCallback>())).verifyPeer as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vnc_Viewer_PeerVerificationCallback),
            "::",
            stringify!(verifyPeer)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<vnc_Viewer_PeerVerificationCallback>())).cancelPeerVerification
                as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(vnc_Viewer_PeerVerificationCallback),
            "::",
            stringify!(cancelPeerVerification)
        )
    );
}
extern "C" {
    #[doc = " Sets the callbacks to be called to verify the identity of the peer (server)."]
    #[doc = ""]
    #[doc = " If these are not provided for a VNC Cloud connection, the connection will"]
    #[doc = " continue regardless, since VNC Cloud automatically verifies peer identities"]
    #[doc = " for the connecting user. This check is for peace of mind only, and likely"]
    #[doc = " only to be useful if you have out-of-band access to a list of all potential"]
    #[doc = " Server identities."]
    #[doc = ""]
    #[doc = " If these are not provided for a Direct TCP connection, on the other hand, an"]
    #[doc = " identity verification dialog will automatically be displayed (rendered"]
    #[doc = " into the framebuffer), since the connecting user really should consider the"]
    #[doc = " risk of connecting to a MITM or other malicious entity."]
    #[doc = ""]
    #[doc = " @param viewer The Viewer."]
    #[doc = " @param callback The new peer verification callback."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     The vnc_Viewer_PeerVerificationCallback::verifyPeer callback is NULL"]
    pub fn vnc_Viewer_setPeerVerificationCallback(
        viewer: *mut vnc_Viewer,
        callback: *const vnc_Viewer_PeerVerificationCallback,
        userData: *mut ::std::os::raw::c_void,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Provides the SDK with the response to the"]
    #[doc = " vnc_Viewer_PeerVerificationCallback::verifyPeer request."]
    #[doc = ""]
    #[doc = " @param viewer The Viewer."]
    #[doc = " @param ok #vnc_true if the connection is approved, #vnc_false if it should"]
    #[doc = "    be rejected."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    #[doc = ""]
    #[doc = " @retval UnexpectedCall"]
    #[doc = "     No peer verification is in progress"]
    pub fn vnc_Viewer_sendPeerVerificationResponse(
        viewer: *mut vnc_Viewer,
        ok: vnc_bool_t,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Enables receipt of audio from the Server by the Viewer. The audio stream"]
    #[doc = " will be automatically negotiated with the peer endpoint, if possible, and"]
    #[doc = " any received audio data will be played back via the device's default audio"]
    #[doc = " mixer."]
    #[doc = " By default, this is disabled and no audio channel will be negotiated."]
    #[doc = ""]
    #[doc = " @param viewer The Viewer."]
    #[doc = " @param enable #vnc_true to enable audio playback, #vnc_false to disable."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    #[doc = ""]
    #[doc = " @retval PeerNotSupported"]
    #[doc = "     The peer endpoint does not support audio"]
    #[doc = ""]
    #[doc = " @retval NotSupported"]
    #[doc = "     This platform does not support audio"]
    #[doc = ""]
    #[doc = " @since 1.9"]
    pub fn vnc_Viewer_enableAudio(viewer: *mut vnc_Viewer, enable: vnc_bool_t) -> vnc_status_t;
}
extern "C" {
    #[doc = " Obtains the Viewer's @ref vnc_AnnotationManager for handling annotation"]
    #[doc = " operations."]
    #[doc = ""]
    #[doc = " @param viewer The current Viewer."]
    #[doc = ""]
    #[doc = " @return A @ref vnc_AnnotationManager, valid for the lifetime of the Viewer."]
    #[doc = ""]
    #[doc = " @since 1.4"]
    pub fn vnc_Viewer_getAnnotationManager(viewer: *mut vnc_Viewer) -> *mut vnc_AnnotationManager;
}
#[doc = " Auto quality means that the viewer selects an appropriate encoding and"]
#[doc = " colour level based on its own line speed estimate."]
pub const vnc_Viewer_PictureQuality_vnc_Viewer_PictureQuality_Auto: vnc_Viewer_PictureQuality = 0;
#[doc = " Auto quality means that the viewer selects an appropriate encoding and"]
#[doc = " colour level based on its own line speed estimate."]
pub const vnc_Viewer_PictureQuality_vnc_Viewer_PictureQuality_High: vnc_Viewer_PictureQuality = 1;
#[doc = " Auto quality means that the viewer selects an appropriate encoding and"]
#[doc = " colour level based on its own line speed estimate."]
pub const vnc_Viewer_PictureQuality_vnc_Viewer_PictureQuality_Medium: vnc_Viewer_PictureQuality = 2;
#[doc = " Auto quality means that the viewer selects an appropriate encoding and"]
#[doc = " colour level based on its own line speed estimate."]
pub const vnc_Viewer_PictureQuality_vnc_Viewer_PictureQuality_Low: vnc_Viewer_PictureQuality = 3;
#[doc = " Enumeration of picture quality levels."]
pub type vnc_Viewer_PictureQuality = ::std::os::raw::c_uint;
extern "C" {
    #[doc = " Returns the viewer's current picture quality."]
    #[doc = ""]
    #[doc = " This returns the actual picture quality in use if the viewer is connected,"]
    #[doc = " or the last value set otherwise."]
    pub fn vnc_Viewer_getPictureQuality(viewer: *mut vnc_Viewer) -> vnc_Viewer_PictureQuality;
}
